# shorts_exctractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: clip.h  ffmpeg_wrapper.h  time_parser.h
scripts/: build.bat  build.sh
src/: main.cpp
tests/: test_time_parser.cpp
